--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.8"
 urwid = "^2.1.0"
 toml = "^0.10.1"
 evdev = "^1.3.0"
+cachetools = "^4.1.0"
+humanize = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
