--- a/retrolauncher/config/retrolauncher.toml
+++ b/retrolauncher/config/retrolauncher.toml
@@ -8,7 +8,7 @@ f1 = { name = "RA", cmd = "retroarch" }
 f2 = { name = "RA32", cmd = "retroarch32" }
 f3 = { name = "Hotkey" }
 f4 = { name = "ES", cmd = "emulationstation" }
-f5 = { name = "Shutdown", cmd = "systemctl poweroff" }
+f5 = { name = "Shutdown", cmd = "sudo systemctl poweroff" }
 f6 = { name = "Quit", action = "quit" }
 
 [[apps]]
